update avatar size

--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ enableEmoji=true
 	[params.author]
 		name = "David Nguyen"
 		description = "Just a regular developer who's passionate about crafting high quality software, a martial arts practitioner, a proud dad of two sons."
-		avatar = "https://www.gravatar.com/avatar/624eb530503fe6117f4b4b5ad3acf062"
+		avatar = "https://www.gravatar.com/avatar/624eb530503fe6117f4b4b5ad3acf062?s=150"
 		motto = "Developer & Karateka"
 
 	[params.features]
