not generate 404 separately since it's already included in 404 layout

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ enableRobotsTXT = true
 disqusShortname = "pnguyen"
 
 #Skip building these files
-ignoreFiles = ["content/cards/\\.*"]
+ignoreFiles = ["content/cards/\\.*", "content/404.md"]
 
 #Syntax highlighting
 pygmentsCodeFences = true
