--- a/config.prod.toml
+++ b/config.prod.toml
@@ -1,6 +1,3 @@
 baseURL = "https://pnguyen.io"
 
-googleAnalytics = "UA-125420743-1"
-
-[params]
-    googleAnalyticsMeasurementId = "G-54FEYHJ6RL"
+googleAnalytics = "G-54FEYHJ6RL"
