--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ enableEmoji=true
 		#Enable share card
 		shareCard = true
 		#Use custom CSS
-		customCSS = ["https://cdn.rawgit.com/UtkarshVerma/hugo-dream-plus/ae11561d/exampleSite/static/css/highlight.css"]
+		customCSS = ["/css/highlight.css"]
 
 	[params.background]
 		bgColor = "linear-gradient(to bottom, #13547A, #70BEBC)"
