Add link to codeproject in navigation

--- a/config.toml
+++ b/config.toml
@@ -57,6 +57,7 @@ enableEmoji=true
 [social]
 	github = "hpcsc"
 	linkedin = "nguyenhungphuong"
+	codeproject = "hpcsc"
 
 [markup]
 	[markup.goldmark]
